RESOLVED FIXED89818
Inspector crashes when trying to inspect a page with CSS variables
https://bugs.webkit.org/show_bug.cgi?id=89818
Summary Inspector crashes when trying to inspect a page with CSS variables
Dimitri Glazkov (Google)
Reported 2012-06-23 15:02:54 PDT
1) Go to URL above 2) Try to inspect the element that has CSS Variables applied to it 3) ... boom.
Attachments
Patch (5.67 KB, patch)
2012-06-25 18:04 PDT, Luke Macpherson
no flags
Patch (4.89 KB, patch)
2012-06-25 20:56 PDT, Luke Macpherson
no flags
Patch (7.97 KB, patch)
2012-06-28 18:37 PDT, Luke Macpherson
no flags
Patch (9.83 KB, patch)
2012-06-28 18:50 PDT, Luke Macpherson
no flags
Archive of layout-test-results from ec2-cr-linux-02 (748.88 KB, application/zip)
2012-06-28 22:02 PDT, WebKit Review Bot
no flags
Patch (13.73 KB, patch)
2012-07-01 18:41 PDT, Luke Macpherson
no flags
Archive of layout-test-results from gce-cr-linux-08 (336.14 KB, application/zip)
2012-07-02 05:36 PDT, WebKit Review Bot
no flags
Same Patch - retry on bots. (13.70 KB, patch)
2012-07-02 16:51 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-06-24 16:31:56 PDT
Are you using a custom build with --css-variables to reproduce this?
Dimitri Glazkov (Google)
Comment 2 2012-06-24 16:36:39 PDT
(In reply to comment #1) > Are you using a custom build with --css-variables to reproduce this? Yup.
Luke Macpherson
Comment 3 2012-06-25 18:04:53 PDT
Dimitri Glazkov (Google)
Comment 4 2012-06-25 18:28:30 PDT
Comment on attachment 149414 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=149414&action=review > Source/WebCore/css/CSSParser.cpp:2974 > + printf("storing variable name \"%s\"\n", tmp.ascii().data()); printf :)
Dimitri Glazkov (Google)
Comment 5 2012-06-25 18:28:51 PDT
Pavel, can you help Luke with the test for this?
Luke Macpherson
Comment 6 2012-06-25 20:56:00 PDT
Pavel Feldman
Comment 7 2012-06-25 23:37:29 PDT
(In reply to comment #5) > Pavel, can you help Luke with the test for this? There is a bunch of these under LayoutTests/inspector/styles. You'll probably want to land them disabled until your feature is enabled (oh how do we handle these cases?). Adding apavlov@ for additional help.
Luke Macpherson
Comment 8 2012-06-28 18:37:57 PDT
Luke Macpherson
Comment 9 2012-06-28 18:50:27 PDT
Luke Macpherson
Comment 10 2012-06-28 18:52:03 PDT
Last patch adds a test to inspector, but we still need to disable that test if CSS_VARIABLES compile flag is off. One option would be to just move that test under fast/css/variables, where it will be ignored unless the flag is on.
WebKit Review Bot
Comment 11 2012-06-28 22:02:19 PDT
Comment on attachment 150063 [details] Patch Attachment 150063 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13119219 New failing tests: inspector/styles/css-variables.html
WebKit Review Bot
Comment 12 2012-06-28 22:02:25 PDT
Created attachment 150083 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Alexander Pavlov (apavlov)
Comment 13 2012-06-29 01:10:43 PDT
(In reply to comment #10) > Last patch adds a test to inspector, but we still need to disable that test if CSS_VARIABLES compile flag is off. One option would be to just move that test under fast/css/variables, where it will be ignored unless the flag is on. Since inspector tests require special setup, and they are filtered by the "/inspector" file URL part, I believe it's easier to add a directory like "LayoutTests/inspector/variables" to the result of _missing_symbol_to_skipped_tests() for the "CSSVariableValue" key (in Tools/Scripts/webkitpy/layout_tests/port/webkit.py) and get the benefit of the web inspector tests run only with the css variables enabled.
Luke Macpherson
Comment 14 2012-07-01 18:41:59 PDT
WebKit Review Bot
Comment 15 2012-07-02 05:36:16 PDT
Comment on attachment 150353 [details] Patch Attachment 150353 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13133092 New failing tests: fast/loader/loadInProgress.html
WebKit Review Bot
Comment 16 2012-07-02 05:36:21 PDT
Created attachment 150403 [details] Archive of layout-test-results from gce-cr-linux-08 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Luke Macpherson
Comment 17 2012-07-02 16:51:59 PDT
Created attachment 150498 [details] Same Patch - retry on bots.
Luke Macpherson
Comment 18 2012-07-03 17:24:01 PDT
I can haz r+?
WebKit Review Bot
Comment 19 2012-07-04 17:16:14 PDT
Comment on attachment 150498 [details] Same Patch - retry on bots. Clearing flags on attachment: 150498 Committed r121874: <http://trac.webkit.org/changeset/121874>
WebKit Review Bot
Comment 20 2012-07-04 17:16:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.